Added graphic, 3d, web, and furniture pages

--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
           <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-extrabold">
             <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
             <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
+            <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+            <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
+            <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+            <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
             <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
           </ul>
         </div>
@@ -47,10 +47,10 @@
         <ul class="menu menu-horizontal px-1 font-extrabold text-base">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
+          <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+          <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
+          <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+          <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
           <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
         </ul>
       </div>
