--- a/resume.html
+++ b/resume.html
@@ -27,10 +27,10 @@
           <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-extrabold">
             <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
             <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
-            <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
+            <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+            <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
+            <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+            <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
             <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
           </ul>
         </div>
@@ -47,10 +47,10 @@
         <ul class="menu menu-horizontal px-1 font-extrabold text-base">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
+          <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+          <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
+          <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+          <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
           <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
         </ul>
       </div>
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="flex flex-col items-center lg:items-start">
-        <a href="resume" class="pb-2">
+        <a href="https://drive.google.com/file/d/18dKZqQ2YVJiX_VJzWcw3T6ImxduPO0nV/view" target="_blank" class="pb-2">
           <button class="btn normal-case btn-neutral btn-wide">
             download my resume
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
@@ -323,7 +323,7 @@
       <div class="grid grid-cols-1 gap-2 pt-10">
         <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR DOWNLOAD MY RESUME</p>
         <p class="text-base">Download my resume in PDF format.</p>
-        <a href="resume">
+        <a href="https://drive.google.com/file/d/18dKZqQ2YVJiX_VJzWcw3T6ImxduPO0nV/view" target="_blank">
           <button class="btn normal-case btn-neutral">
             download my resume
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
