--- a/web.html
+++ b/web.html
@@ -57,129 +57,91 @@
     </div>
 
   <div class="main">
-    <!-- TEXT HEADER -->
-    <div class="py-20 md:py-40 grid grid-cols-1 gap-2 lg:gap-4">
-      <p class="text-4xl lg:text-6xl font-bold">Hey I’m Marina and I am a</p>
-      <p class="text-4xl lg:text-6xl font-bold">multidisciplinary digital designer</p>
-      <p class="text-xl lg:text-2xl font-semibold">in the field of graphic design, 3D art, and furniture design.</p>
+    <!-- HEADER -->
+    <div class="flex flex-col pt-40 pb-16">
+        <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2018-2023</p>
+        <p class="font-bold text-5xl lg:text-6xl pb-4">Website Design</p>
+        <p class="text-lg">Selected works from my website freelance design projects.</p>
     </div>
 
-    <div class="flex flex-col">
-      <!-- WORKS  -->
-      <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-5">WORKS</p>
-      <!-- GALLERY -->
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
-        <div class="col-span-1 lg:col-span-2 grid grid-rows-1 lg:grid-rows-2 gap-5">
-          <div class="content">
-            <a href="graphic">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg"
-                src="images/graphic-design-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">Graphic Design</h3>
-              </div>
-            </a>
-          </div>
-          <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
-            <div class="content h-full">
-              <a href="web">
+    <!-- GALLERY -->
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
+        <div class="content">
+            <a href="">
                 <div class="content-overlay"></div>
                 <img
-                  class="content-image rounded-lg h-full"
-                  src="images/funiture-cover.png"
-                  alt="image"
+                    class="content-image rounded-lg"
+                    src="https://images.spr.so/cdn-cgi/imagedelivery/j42No7y-dcokJuNgXeA0ig/ddb551c2-b406-4f29-aa81-218f57477d28/Artboard_1_copy_4/w=3840,quality=80"
+                    alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Web Design</h3>
+                <h3 class="content-title">Website 1</h3>
                 </div>
-              </a>
-            </div>
-            <div class="content h-full">
-              <a href="furniture">
+            </a>
+        </div>
+        <div class="content">
+            <a href="">
                 <div class="content-overlay"></div>
                 <img
-                  class="content-image rounded-lg h-full"
-                  src="images/funiture-cover.png"
-                  alt="image"
+                    class="content-image rounded-lg"
+                    src="https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F8fec686a-e95f-40e2-bd6d-cc963bd01d22%2FArtboard_1_copy.png?id=7f4d9144-9a88-490c-8325-ca01f7415421&amp;table=block"
+                    alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Furniture Design</h3>
+                <h3 class="content-title">Website 2</h3>
                 </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-span-1">
-          <div class="content h-full hidden lg:block">
-            <a href="3d">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg h-full"
-                src="images/3d-projects-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">3D Projects</h3>
-              </div>
             </a>
-          </div>
-          <div class="content block lg:hidden">
-            <a href="3d">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg"
-                src="images/graphic-design-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">3D Projects</h3>
-              </div>
-            </a>
-          </div>
         </div>
-      </div>
+        <div class="content">
+            <a href="">
+                <div class="content-overlay"></div>
+                <img
+                    class="content-image rounded-lg"
+                    src="https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F423d0c49-cace-413a-a56b-5fde362a1bf9%2FArtboard_1_copy_3.png?id=7212fa82-7e39-444e-b69d-27b5bc82aa6a&amp;table=block"
+                    alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                <h3 class="content-title">Website 3</h3>
+                </div>
+            </a>
+        </div>
+        <div class="content">
+            <a href="">
+                <div class="content-overlay"></div>
+                <img
+                    class="content-image rounded-lg"
+                    src="https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F14695293-9555-4f51-b7f3-a8db9021a409%2FArtboard_1_copy_2.png?id=4febf7d5-8abd-49f5-9187-f91cc4c5933a&amp;table=block"
+                    alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                <h3 class="content-title">Website 4</h3>
+                </div>
+            </a>
+        </div>
     </div>
 
-    <div class="py-40 grid grid-cols-1 lg:grid-cols-2 gap-20 lg:gap-60 text-black">
-      <!-- MY DESIGN PHILOSOPHY -->
-      <div class="flex flex-col">
-        <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-8">MY DESIGN PHILOSOPHY</p>
-        <p class="text-base">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
-      </div>
-      <!-- LEARN MORE ABOUT ME & RESUME -->
-      <div class="flex flex-col">
-        <!-- LEARN MORE ABOUT ME -->
-        <div class="grid grid-cols-1 gap-2">
-          <p class="text-xl xl:text-2xl font-bold text-[#678309]">LEARN MORE ABOUT ME</p>
-          <p class="text-base">Who I am, my achievements, interests, and experiences.</p>
-          <a href="about">
-            <button class="btn normal-case btn-neutral">
-              about me
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-                <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
-              </svg>
-            </button>
-          </a>
-        </div>
-        <!-- OR HEAD STRAIGHT TO MY RESUME -->
-        <div class="grid grid-cols-1 gap-2 pt-10">
-          <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR HEAD STRAIGHT TO MY RESUME</p>
-          <p class="text-base">A summary of my work experience.</p>
-          <a href="resume">
-            <button class="btn normal-case btn-neutral">
-              resume
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-                <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
-              </svg>
-            </button>
-          </a>
-        </div>
+    <div class="py-20"></div>
+
+    <!-- VIEW MY OTHER WORKS -->
+    <div class="flex flex-col items-center pt-10 pb-40">
+      <p class="text-4xl lg:text-5xl font-bold text-center pb-10">view my other works</p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-40">
+        <a href="3d">
+          <button class="btn normal-case btn-neutral">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+              <path fill-rule="evenodd" d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z" clip-rule="evenodd" />
+            </svg>
+            3d animation
+          </button>
+        </a>
+        <a href="furniture">
+          <button class="btn normal-case btn-neutral">
+            furniture design
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </a>
       </div>
     </div>
 
