Updated blog images

--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
         <div class="grid grid cols-1 gap-5">
           <img
             class="content-image rounded-lg"
-            src="images/graphic-design-cover.png"
+            src="images/blog/blog.jpg"
             alt="image"
           >
           <div>
@@ -80,7 +80,7 @@
         <div class="grid grid cols-1 gap-5">
           <img
             class="content-image rounded-lg"
-            src="images/graphic-design-cover.png"
+            src="images/blog/blog.jpg"
             alt="image"
           >
           <div>
