--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
             </svg>
           </label>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-extrabold">
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-bold">
             <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
             <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
             <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
@@ -44,7 +44,7 @@
         </a>
       </div>
       <div class="navbar-end hidden xl:flex">
-        <ul class="menu menu-horizontal px-1 font-extrabold text-base">
+        <ul class="menu menu-horizontal px-1 font-bold text-base">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
           <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
