--- a/graphic.html
+++ b/graphic.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="./global.style.css">
 
-    <title>marinatatshani</title>
+    <title>marina tatshani</title>
     <link rel="icon" href="images/sun-icon.png" sizes="32x32" type="image/png" />
   </head>
   <body>
