--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,6 @@
     <!-- DaisyUI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.6/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="test.js"></script>
 
     <link rel="stylesheet" href="./global.style.css">
 
@@ -63,7 +62,7 @@
       <p class="text-xl xl:text-2xl font-bold text-[#678309] pt-40">BLOG</p>
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
         <div class="grid grid cols-1 gap-5">
-          <a href="blogs/blog1">
+          <a href="blog/blog1">
             <img
               class="content-image rounded-lg"
               src="images/blog/blog.jpg"
@@ -81,7 +80,7 @@
           </div>
         </div>
         <div class="grid grid cols-1 gap-5">
-          <a href="blogs/blog2">
+          <a href="blog/blog2">
             <img
               class="content-image rounded-lg"
               src="images/blog/blog.jpg"
