Fixed button spacing

--- a/about.html
+++ b/about.html
@@ -190,12 +190,12 @@
             <p class="text-xl lg:text-2xl font-bold">
               International Arts & Design Competition 2021
             </p>
-            <div class="flex flex-row">
+            <div class="flex flex-col md:flex-row">
               <p class="text-base lg:text-lg font-bold text-[#E2883B]">
-                3rd Place Winner
+                3rd Place Winner&nbsp;
               </p>
               <p class="text-base lg:text-lg font-bold">
-                , Professional Category
+                - Professional Category
               </p>
             </div>
             <p class="text-base lg:text-lg text-[#E2883B] font-medium">
@@ -218,10 +218,10 @@
           <p class="text-base lg:text-lg font-extrabold">
             University of Santo Tomas, Philippines
           </p>
-          <p class="text-base lg:text-lg text-[#E2883B]">
+          <p class="text-base lg:text-lg text-[#E2883B] font-medium">
             Bachelor of Fine Arts
           </p>
-          <p class="text-base lg:text-lg text-[#E2883B]">
+          <p class="text-base lg:text-lg text-[#E2883B] font-medium">
             Major in Industrial Design
           </p>
         </div>
@@ -232,7 +232,7 @@
           <p class="text-base lg:text-lg font-extrabold">
             Accademia Riaci, Italy
           </p>
-          <p class="text-base lg:text-lg text-[#E2883B]">
+          <p class="text-base lg:text-lg text-[#E2883B] font-medium">
             12-Weeks Course in Interior Design
           </p>
         </div>
@@ -243,8 +243,8 @@
 
     <!-- VIEW MY RESUME -->
     <div class="flex flex-col items-center pt-10 pb-40">
-      <p class="text-4xl lg:text-6xl font-bold">view my resume</p>
-      <p class="text-base lg:text-lg font-medium pt-5 pb-8">A summary of my work experience.</p>
+      <p class="text-4xl lg:text-5xl font-bold">view my resume</p>
+      <p class="text-base lg:text-lg font-medium pt-2 pb-5">A summary of my work experience.</p>
       <a href="resume">
         <button class="btn normal-case btn-neutral">
           resume
