--- a/graphic/casa-selma.html
+++ b/graphic/casa-selma.html
@@ -62,7 +62,7 @@
 
     <!-- GO BACK -->
     <div class="flex justify-center md:justify-start">
-      <a href="blog">
+      <a href="graphic">
         <button class="btn normal-case btn-neutral btn-wide">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
             <path fill-rule="evenodd" d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z" clip-rule="evenodd" />
@@ -72,12 +72,32 @@
       </a>
     </div>
 
-    <div class="grid grid-cols-1 gap-14">
-      <!-- BLOG  -->
-      <p class="text-xl xl:text-2xl font-bold text-[#678309] pt-28">BLOG</p>
-      <div>
-        <p class="font-bold text-5xl lg:text-6xl pb-2">Add Project Title Here 1</p>
-        <p class="text-[#A697AD] text-lg font-medium">DECEMBER 00, 2000</p>
+    <div class="grid grid-cols-1 gap-16 pt-20">
+
+      <!-- IMAGE & TITLE -->
+      <div class="grid grid-cols-1 lg:grid-cols-5 gap-16">
+        <div class="lg:col-span-2">
+          <img
+            class="content-image rounded-lg h-full"
+            src="images/funiture-cover.png"
+            alt="image"
+          >
+        </div>
+        <div class="lg:col-span-3">
+          <!-- TITLE  -->
+          <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-14">GRAPHIC DESIGN</p>
+          <div>
+            <p class="font-bold text-5xl lg:text-6xl pb-2">Project Title Here</p>
+            <p class="text-[#A697AD] text-lg font-medium pb-8">CATEGORY - CATEGORY</p>
+            <p class="text-[#A697AD] text-lg font-medium">2022</p>
+            <p class="text-[#A697AD] text-lg font-medium pb-8">FREELANCE PROJECT</p>
+          </div>
+
+          <p class="max-w-2xl">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </div>
       </div>
 
       <p class="max-w-7xl">
@@ -87,18 +107,24 @@
         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
 
+      <!-- GALLERY -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-20">
       <img
         class="content-image rounded-lg"
-        src="images/blog/blog.jpg"
+        src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
         alt="image"
       >
-
-      <p class="max-w-7xl">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <img
+        class="content-image rounded-lg"
+        src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
+        alt="image"
+      >
+      <img
+        class="content-image rounded-lg"
+        src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
+        alt="image"
+      >
+    </div>
 
       <p class="max-w-7xl">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -112,7 +138,7 @@
 
     <!-- GO BACK -->
     <div class="flex justify-center md:justify-start">
-      <a href="blog">
+      <a href="graphic">
         <button class="btn normal-case btn-neutral btn-wide">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
             <path fill-rule="evenodd" d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z" clip-rule="evenodd" />
