--- a/web.html
+++ b/web.html
@@ -125,7 +125,7 @@
     <!-- VIEW MY OTHER WORKS -->
     <div class="flex flex-col items-center pt-10 pb-40">
       <p class="text-4xl lg:text-5xl font-bold text-center pb-10">view my other works</p>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-40">
+      <div class="grid grid-cols-1 justify-items-center gap-10 md:grid-cols-2 md:gap-40">
         <a href="3d">
           <button class="btn normal-case btn-neutral">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
