Updated logo sizes in resume page

--- a/resume.html
+++ b/resume.html
@@ -66,19 +66,19 @@
           <img
               src="https://drive.google.com/uc?export=view&id=18ZfvApUVjhZ9EN6VINOq0yLkeIFbmQN3"
               alt="image"
-              width="100"
-              height="100"
+              width="90"
+              height="90"
           >
-          <p class="font-medium text-xl text-[#678309]">Graphic Designer</p>
+          <p class="font-medium text-xl text-[#678309] text-center">Graphic Designer</p>
         </div>
         <div class="grid grid-cols-1 gap-4 justify-items-center">
           <img
               src="https://drive.google.com/uc?export=view&id=18ZfvApUVjhZ9EN6VINOq0yLkeIFbmQN3"
               alt="image"
-              width="100"
-              height="100"
+              width="90"
+              height="90"
           >
-          <p class="font-medium text-xl text-[#678309]">3D Visualizer</p>
+          <p class="font-medium text-xl text-[#678309] text-center">3D Visualizer</p>
         </div>
         <div class="grid grid-cols-1 gap-4 justify-items-center">
           <img
@@ -87,7 +87,7 @@
               width="60"
               height="60"
           >
-          <p class="font-medium text-xl text-[#678309]">Furniture Designer</p>
+          <p class="font-medium text-xl text-[#678309] text-center">Furniture Designer</p>
         </div>
       </div>
       <div class="flex flex-col items-center lg:items-start">
@@ -111,6 +111,8 @@
         <img
           src="https://drive.google.com/uc?export=view&id=19P-zPDShFmcumh8zGxu7qxMxGi_VeaDv"
           alt="image"
+          width="170"
+          height="170"
         >
       </div>
       <div class="col-span-1 lg:col-span-2 flex flex-col">
@@ -137,6 +139,8 @@
         <img
           src="https://drive.google.com/uc?export=view&id=1svKQVm9z77B_w0NA2J-_sc5gxMr_occ7"
           alt="image"
+          width="120"
+          height="120"
         >
       </div>
       <div class="col-span-1 lg:col-span-2 flex flex-col">
@@ -159,6 +163,8 @@
         <img
           src="https://drive.google.com/uc?export=view&id=1gV3rZMPm4bVrtpOwSTUYn8uaquEVS_eA"
           alt="image"
+          width="130"
+          height="130"
         >
       </div>
       <div class="col-span-1 lg:col-span-2 flex flex-col">
@@ -185,6 +191,8 @@
         <img
           src="https://drive.google.com/uc?export=view&id=1eM-uCp-x9zGLq-3Ypev9kP6g1Zjrvy8B"
           alt="image"
+          width="140"
+          height="140"
         >
       </div>
       <div class="col-span-1 lg:col-span-2 flex flex-col">
