--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       <!-- GALLERY -->
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
         <div class="col-span-1 lg:col-span-2 grid grid-rows-1 lg:grid-rows-2 gap-5">
-          <div class="content">
+          <div class="content h-full">
             <a href="graphic">
               <div class="content-overlay"></div>
               <img
-                class="content-image rounded-lg"
+                class="content-image rounded-lg h-full"
                 src="images/graphic-design-cover.png"
                 alt="image"
               >
@@ -117,7 +117,7 @@
             <a href="3d">
               <div class="content-overlay"></div>
               <img
-                class="content-image rounded-lg h-full"
+                class="content-image rounded-lg h-full w-full"
                 src="images/3d-projects-cover.png"
                 alt="image"
               >
