Updated button sizes

--- a/resume.html
+++ b/resume.html
@@ -92,7 +92,7 @@
       </div>
       <div class="flex flex-col items-center lg:items-start">
         <a href="https://drive.google.com/file/d/18dKZqQ2YVJiX_VJzWcw3T6ImxduPO0nV/view" target="_blank" class="pb-2">
-          <button class="btn normal-case btn-neutral">
+          <button class="btn normal-case btn-neutral w-72">
             download my resume
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
@@ -319,7 +319,7 @@
         <p class="text-xl xl:text-2xl font-bold text-[#678309]">LEARN MORE ABOUT ME</p>
         <p class="text-base">Who I am, my achievements, interests, and experiences.</p>
         <a href="about">
-          <button class="btn normal-case btn-neutral">
+          <button class="btn normal-case btn-neutral w-48">
             about me
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
@@ -332,7 +332,7 @@
         <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR DOWNLOAD MY RESUME</p>
         <p class="text-base">Download my resume in PDF format.</p>
         <a href="https://drive.google.com/file/d/18dKZqQ2YVJiX_VJzWcw3T6ImxduPO0nV/view" target="_blank">
-          <button class="btn normal-case btn-neutral">
+          <button class="btn normal-case btn-neutral w-72">
             download my resume
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
