--- a/3d.html
+++ b/3d.html
@@ -192,7 +192,7 @@
       <p class="text-4xl lg:text-5xl font-bold text-center pb-10">view my other works</p>
       <div class="grid grid-cols-1 justify-items-center gap-10 md:grid-cols-2 md:gap-40">
         <a href="graphic">
-          <button class="btn normal-case btn-neutral">
+          <button class="btn normal-case btn-neutral w-60">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z" clip-rule="evenodd" />
             </svg>
@@ -200,7 +200,7 @@
           </button>
         </a>
         <a href="web">
-          <button class="btn normal-case btn-neutral">
+          <button class="btn normal-case btn-neutral w-60">
             website design
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
