--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@
       <p class="text-4xl lg:text-5xl font-bold">view my resume</p>
       <p class="text-base lg:text-lg font-medium pt-2 pb-5">A summary of my work experience.</p>
       <a href="resume">
-        <button class="btn normal-case btn-neutral">
+        <button class="btn normal-case btn-neutral w-48">
           resume
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
             <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
