Updated year and subtitle text

--- a/furniture.html
+++ b/furniture.html
@@ -61,7 +61,7 @@
     <div class="flex flex-col pt-40 pb-16">
         <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2018-2023</p>
         <p class="font-bold text-5xl lg:text-6xl pb-4">Furniture Design</p>
-        <p class="text-lg">Selected works during my full time as a furniture designer.</p>
+        <p class="text-lg">Selected works during my full-time position as a furniture designer.</p>
     </div>
 
     <!-- GALLERY -->
@@ -101,7 +101,7 @@
                     alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                <h3 class="content-title">Vogue</h3>
+                <h3 class="content-title">Vogue Italia</h3>
                 </div>
             </a>
         </div>
@@ -114,7 +114,7 @@
                     alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                <h3 class="content-title">Dark 1</h3>
+                <h3 class="content-title">Salakot</h3>
                 </div>
             </a>
         </div>
@@ -140,7 +140,7 @@
                     alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                <h3 class="content-title">Whale</h3>
+                <h3 class="content-title">Willy the Whale</h3>
                 </div>
             </a>
         </div>
