Updated about and resume page

--- a/resume.html
+++ b/resume.html
@@ -66,17 +66,17 @@
           <img
               src="https://drive.google.com/uc?export=view&id=18ZfvApUVjhZ9EN6VINOq0yLkeIFbmQN3"
               alt="image"
-              width="90"
-              height="90"
+              width="60"
+              height="60"
           >
           <p class="font-medium text-xl text-[#678309] text-center">Graphic Designer</p>
         </div>
         <div class="grid grid-cols-1 gap-4 justify-items-center">
           <img
-              src="https://drive.google.com/uc?export=view&id=18ZfvApUVjhZ9EN6VINOq0yLkeIFbmQN3"
+              src="https://drive.google.com/uc?export=view&id=1tFVEel1KN00Dx2bjY97ig0j3XbtEBaLy"
               alt="image"
-              width="90"
-              height="90"
+              width="60"
+              height="60"
           >
           <p class="font-medium text-xl text-[#678309] text-center">3D Visualizer</p>
         </div>
@@ -84,8 +84,8 @@
           <img
               src="https://drive.google.com/uc?export=view&id=1dQCtQN0Do4Btik8dDgX7nOIpxvD-Q2eh"
               alt="image"
-              width="60"
-              height="60"
+              width="40"
+              height="40"
           >
           <p class="font-medium text-xl text-[#678309] text-center">Furniture Designer</p>
         </div>
@@ -221,8 +221,8 @@
           <img
               src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
               alt="image"
-              width="100"
-              height="100"
+              width="50"
+              height="50"
           >
           <p class="font-bold text-2xl pb-10">Softwares</p>
         </div>
@@ -236,6 +236,7 @@
             <li>3DS Max</li>
             <li>Blender</li>
             <li>Corona Renderer</li>
+            <li>Figma</li>
           </ul>
         </div>
       </div>
@@ -245,8 +246,8 @@
           <img
               src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
               alt="image"
-              width="100"
-              height="100"
+              width="50"
+              height="50"
           >
           <p class="font-bold text-2xl pb-10">Management<br/>Apps</p>
         </div>
@@ -266,8 +267,8 @@
           <img
               src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
               alt="image"
-              width="100"
-              height="100"
+              width="50"
+              height="50"
           >
           <p class="font-bold text-2xl pb-10">Expertise</p>
         </div>
@@ -291,8 +292,8 @@
           <img
               src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
               alt="image"
-              width="100"
-              height="100"
+              width="50"
+              height="50"
           >
           <p class="font-bold text-2xl pb-10">Interpersonal</p>
         </div>
